k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-boot-app
  namespace: carapp-namespace
spec:
  replicas: 2
  selector:
    matchLabels:
      app: spring-boot-app
  template:
    metadata:
      labels:
        app: spring-boot-app
    spec:
      containers:
        - name: spring-boot-container
          image: srbinovskia46/carapp:latest
