k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: carapp-namespace
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: carapp-service
  namespace: carapp-namespace
spec:
  selector:
    app: spring-boot-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9090
  type: LoadBalancer
